openshift/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-hello-world
  namespace: lab-c
spec:
  selector:
    matchLabels:
      app: flask
  replicas: 1
  template:
    metadata:
      labels:
        app: flask
    spec:
      containers:
        - name: flask
          image: image-registry.openshift-image-registry.svc:5000/lab-c/flask-hello-world:stc
          ports:
            - containerPort: 5050
