openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-hello-world
  namespace: lab-c
spec:
  selector:
    app: flask
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
